--- a/src/entry/app/index.html
+++ b/src/entry/app/index.html
@@ -54,21 +54,62 @@
       src="../../typescript/webcomponents/terminal.ts"
     ></script>
     <script>
-      //if (process.env.NODE_ENV !== 'development') {
-      if ('serviceWorker' in navigator) {
-        window.addEventListener('load', function () {
-          let sw = './sw.js'
-          try {
-            navigator.serviceWorker
-              .register(sw)
-              .then(console.log)
-              .catch(console.error)
-          } catch (e) {
-            console.warn('sw: ', e)
+          //if (process.env.NODE_ENV !== 'development') {
+          if ('serviceWorker' in navigator) {
+            window.addEventListener('load', function () {
+              let sw = './sw.js'
+              try {
+                navigator.serviceWorker
+                  .register(sw)
+                  .then(console.log)
+                  .catch(console.error)
+              } catch (e) {
+                console.warn('sw: ', e)
+              }
+            })
+          } else {
+      const fetching = window.fetch
+      const CACHE_NAME = 'fetch-cache'
+      const MAX_CACHE_ITEMS = 500
+
+      async function trimCache(cacheName, maxItems) {
+        const cache = await caches.open(cacheName)
+        const keys = await cache.keys()
+        if (keys.length > maxItems) {
+          for (let i = 0; i < keys.length - maxItems; i++) {
+            await cache.delete(keys[i])
           }
-        })
+        }
       }
-      //}
+
+      window.fetch = async function (...args) {
+        const request = new Request(args[0], args[1])
+        const url = new URL(request.url, window.location.origin)
+
+        // Only cache if not same origin
+        if (url.origin !== window.location.origin) {
+          const cache = await caches.open(CACHE_NAME)
+          try {
+            const response = await fetching(...args)
+            if (response.ok) {
+              await cache.put(request, response.clone())
+              await trimCache(CACHE_NAME, MAX_CACHE_ITEMS)
+            }
+            return response
+          } catch (error) {
+            // Network failed, try cache
+            const cachedResponse = await cache.match(request)
+            if (cachedResponse) {
+              return cachedResponse.clone()
+            }
+            throw error // No cache available, rethrow error
+          }
+        } else {
+          // Same origin: just fetch, no caching
+          return fetching(...args)
+        }
+      }
+          //}
     </script>
 
     <link
